name:                chan-split-demo
version:             0.1
synopsis:            Demos for chan-split
description:
license:             BSD3
license-file:        LICENSE
description:
author:              Steven Shaw
maintainer:          Steven Shaw <steven@steshaw.org>
homepage:
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.2

executable chanSplit1
  main-is:           chanSplit1.hs
  build-depends:     base >= 3 && < 5,
                     chan-split
 
executable chanSplit2
  main-is:           chanSplit2.hs
  build-depends:     base >= 3 && < 5,
                     chan-split,
                     contravariant
