cabal-version: 2.4

name: hasql-example
version: 0.0.1.0

executable hasql-example
  main-is: Main.hs
  build-depends:
    base ^>= 4.12.0.0 && <5,
    hasql,
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options: -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options: -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:
      -Wmissing-export-lists
      -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options: -Wmissing-deriving-strategies
