cabal-version:       3.0

name:                hylo-quicksort
version:             0.1.0.0
synopsis: An example use of hylo due to Bartosz Milewski
description:
  See https://bartoszmilewski.com/2020/02/24/math-is-your-insurance-policy/

homepage:            https://github.com/steshaw/learning-haskell/
bug-reports: https://github.com/steshaw/learning-haskell/issues

license:             MIT
license-file:        LICENSE

author:              Steven Shaw

maintainer:          steven@steshaw.org

-- A copyright notice.
-- copyright:

category: Example

extra-source-files:  CHANGELOG.md

executable hylo-quicksort
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base ^>=4.13.0.0
    , recursion ^>=2.2.4.0

  -- Directories containing source files.
  -- hs-source-dirs:

  default-language:    Haskell2010
